--- a/templates/base.html
+++ b/templates/base.html
@@ -66,16 +66,23 @@ rel="stylesheet"
 
             <ul class="navbar-nav d-flex flex-row">
                 <!-- Icons -->
+                    <li class="nav-item me-3 me-lg-0">
+                    <a class="nav-link" href="{% url 'newproject' %}">New Project
+                        <i class="fa-solid fa-file-plus"></i>
+                    </a>
+                    </li>
+                    <li class="nav-item me-3 me-lg-0"> 
+                        <a class="nav-link" href="{% url 'sign-in' %}">
+                            <i class="fa-solid fa-right-to-bracket"></i>
+                        </a>
+                        </li>
+                    
                 <li class="nav-item me-3 me-lg-0">
                 <a class="nav-link" href="{% url 'sign-up' %}">
                     <i class="fa-solid fa-user-plus"></i>
                 </a>
                 </li>
-                <li class="nav-item me-3 me-lg-0">
-                <a class="nav-link" href="{% url 'sign-in' %}">
-                    <i class="fa-solid fa-right-to-bracket"></i>
-                </a>
-                </li>
+
 
             </ul>
             </div>
