--- a/templates/base.html
+++ b/templates/base.html
@@ -54,34 +54,59 @@ rel="stylesheet"
             <i class="fas fa-bars"></i>
             </button>
             <div class="collapse navbar-collapse" id="navbarExample01">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <ul class="navbar-nav me-auto">
                 <li class="nav-item active">
-                <a class="nav-link" aria-current="page" href="">Home</a>
+                <a class="nav-link" aria-current="page" href="{% url 'index' %}">Home</a>
                 </li>
-                <li class="nav-item">
-                <a class="nav-link" href="/" rel="nofollow"
-                    target="_blank">API</a>
-                </li>
+                    <li class="nav-item dropdown">
+                        <a
+                        class="nav-link dropdown-toggle d-flex align-items-center"
+                        href="#"
+                        id="navbarDropdownMenuLink"
+                        role="button"
+                        data-mdb-toggle="dropdown"
+                        aria-expanded="false"
+                        >API
+                        </a>
+                        <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                        <li>
+                            <a class="dropdown-item" target="_blank" href="{% url 'profiles_api' %}">Profiles API</a>
+                        </li>
+                        <li>
+                            <a class="dropdown-item" target="_blank" href="{% url 'projects_api' %}">Projects API</a>
+                        </li>
+                        </ul>
+                    </li>
+            
             </ul>
+
+                                
+            {% if user.is_authenticated %}
+                    
+                        
+            <a href="{% url 'profile' request.user %}" style="color: #0081a7;"><img src="{{request.user.profile.profile_pic.url}}" alt="" width="40px" height="40px" style="border-radius: 50%;"></a>
+            <small style="padding-right: 10px;">Welcome  <a style="color: #0081a7;">{{user.username}}</a></small>
+            {% else %} 
+            <div class="nav-item me-3 me-lg-0"> 
+                <a class="nav-link" href="{% url 'sign-in' %}">
+                    <i class="fa-solid fa-right-to-bracket"></i>
+                </a>
+            </div><br>
+            <div class="nav-item me-3 me-lg-0"> 
+            <a class="nav-link" href="{% url 'sign-up' %}">
+                <i class="fa-solid fa-user-plus"></i>
+            </a>
+        </div>
+        {% endif %}
 
             <ul class="navbar-nav d-flex flex-row">
                 <!-- Icons -->
-                    <li class="nav-item me-3 me-lg-0">
-                    <a class="nav-link" href="{% url 'newproject' %}">New Project
-                        <i class="fa-solid fa-file-plus"></i>
-                    </a>
-                    </li>
-                    <li class="nav-item me-3 me-lg-0"> 
-                        <a class="nav-link" href="{% url 'sign-in' %}">
-                            <i class="fa-solid fa-right-to-bracket"></i>
-                        </a>
-                        </li>
                     
-                <li class="nav-item me-3 me-lg-0">
-                <a class="nav-link" href="{% url 'sign-up' %}">
-                    <i class="fa-solid fa-user-plus"></i>
-                </a>
-                </li>
+                    <a class="nav-link" href="{% url 'newproject' %}">
+                    
+                        <button class="nav-item me-3 me-lg-0 btn " style="color: white;background-color:black" >
+                            Submit a Site</button>
+                    </a>
 
 
             </ul>
@@ -101,6 +126,10 @@ rel="stylesheet"
     ></script>
     {% endblock %}
 </body>
+
+
+
+
 <footer class="bg-dark text-center text-white">
     <!-- Grid container -->
     <div class="container p-4 pb-0">
