--- a/templates/search.html
+++ b/templates/search.html
@@ -22,7 +22,7 @@
         
     </div>
     <div class="col-md-4">
-        <h3><u>{{project.title}}</u></h3>
+        <h3><u>{{projects.title}}</u></h3>
         <h4>Description:</h4> <p>{{projects.description}}</p>
         <p class="text-muted"> Developed by:  {{projects.profile}} </p>
 
